--- a/dao/src/main/resources/db.properties
+++ b/dao/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/test?serverTimezone=Hongkong
+url=jdbc:mysql://localhost:3306/test?serverTimezone=Hongkong&useUnicode=true&characterEncoding=UTF-8
 user=root
 passwd=root
