--- a/entity/pom.xml
+++ b/entity/pom.xml
@@ -15,4 +15,12 @@
   <name>entity</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
