--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,13 @@
       <artifactId>aspectjrt</artifactId>
       <version>1.8.6</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>5.2.1.RELEASE</version>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>commons-fileupload</groupId>
