--- a/pom.xml
+++ b/pom.xml
@@ -363,6 +363,11 @@
       <artifactId>standard</artifactId>
       <version>1.1.2</version>
     </dependency>
+    <dependency>
+      <groupId>javax</groupId>
+      <artifactId>javaee-api</artifactId>
+      <version>8.0.1</version>
+    </dependency>
   </dependencies>
 
   <build>
