--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>dao</module>
     <module>service</module>
     <module>web_app</module>
+      <module>utils</module>
   </modules>
 
   <name>SSMmaven</name>
