--- a/pom.xml
+++ b/pom.xml
@@ -376,6 +376,12 @@
       <artifactId>jedis</artifactId>
       <version>3.2.0</version>
     </dependency>
+    <!-- Lombok依赖 -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.10</version>
+    </dependency>
   </dependencies>
 
   <build>
